--- a/styles/main.css
+++ b/styles/main.css
@@ -17,6 +17,7 @@ body {
 .panels {
   min-height: 100vh;
   overflow: hidden;
+  display: flex;
 }
 
 .panel {
@@ -34,6 +35,10 @@ body {
   font-size: 20px;
   background-size: cover;
   background-position: center;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
@@ -47,7 +52,24 @@ body {
   margin: 0;
   width: 100%;
   transition: transform 0.5s;
+  flex: 1 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.panel >*:first-child {
+  transform: translateY(-100%);
+}
+
+.panel >*:last-child {
+  transform: translateY(100%);
+}
+
+.panel.open-active >*:first-child, .panel.open-active >*:last-child {
+  transform: translateY(0);
+}
+
 
 .panel p {
   text-transform: uppercase;
@@ -62,4 +84,5 @@ body {
 
 .panel.open {
   font-size: 40px;
+  flex: 5;
 }
