Add filter grayscale to remove on hover and click

--- a/styles/main.css
+++ b/styles/main.css
@@ -39,6 +39,11 @@ body {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  filter: grayscale(100%);
+}
+
+.panel:hover {
+  filter: none;
 }
 
 .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
@@ -85,4 +90,5 @@ body {
 .panel.open {
   font-size: 40px;
   flex: 5;
+  filter: none;
 }
