Add final styling

--- a/styles/main.css
+++ b/styles/main.css
@@ -73,13 +73,13 @@ body {
 
 .panel.open-active >*:first-child, .panel.open-active >*:last-child {
   transform: translateY(0);
+  font-weight: 400;
 }
-
 
 .panel p {
   text-transform: uppercase;
-  font-family: 'Amatic SC', cursive;
-  text-shadow: 0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
+  font-family: 'Abril Fatface', cursive;
+  text-shadow: 0 0 4px rgba(0, 0, 0, 0.2), 0 0 4px rgba(0, 0, 0, 0.3);
   font-size: 2em;
 }
 
