--- a/styles/main.css
+++ b/styles/main.css
@@ -46,11 +46,11 @@ body {
   filter: none;
 }
 
-.panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
-.panel2 { background-image:url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500); }
-.panel3 { background-image:url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d); }
-.panel4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
-.panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
+.panel1 { background-image:url(https://source.unsplash.com/odxB5oIG_iA/1500x1500); }
+.panel2 { background-image:url(https://source.unsplash.com/ykeLTANUQyE/1500x1500); }
+.panel3 { background-image:url(https://source.unsplash.com/q2aUAimG674/1500x1500); }
+.panel4 { background-image:url(https://source.unsplash.com/YZgkPAzy1C4/1500x1500); }
+.panel5 { background-image:url(https://source.unsplash.com/VxCE1yORbE8/1500x1500); }
 
 /* Flex Children */
 .panel > * {
@@ -79,7 +79,11 @@ body {
 .panel p {
   text-transform: uppercase;
   font-family: 'Abril Fatface', cursive;
-  text-shadow: 0 0 4px rgba(0, 0, 0, 0.2), 0 0 4px rgba(0, 0, 0, 0.3);
+  /* text-shadow: 0 0 6px rgba(0, 0, 0, 0.2), 0 0 6px rgba(0, 0, 0, 0.3); */
+  text-shadow: 0px 1px 0px #b2a98f,
+               0px 14px 10px rgba(0,0,0,0.15),
+               0px 24px 2px rgba(0,0,0,0.1),
+               0px 34px 30px rgba(0,0,0,0.1);  
   font-size: 2em;
 }
 
